--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,7 +1,9 @@
 .header {
-    height: 12vh;
+    height: 15vh;
     width: 100%;
-    background-color: #333333;
+    color: #FFB500;
+    background-color: #644117;
+    font-size:10vw;
 }
 .jumbotron{
   margin-top: 0px;
@@ -11,6 +13,19 @@ background-color: #644117;
 padding-bottom: 0;
 }
 
+.upsLogo {
+  //display: inline-block;
+  float: left;
+  height: 100px;
+  width: auto;
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+.h5fix
+{
+  padding: 30px 0;
+  font-size: 30px;
+}
 @media only screen and (max-width: 600px) {
   .jumbotron{
   padding-top: 1;
@@ -23,7 +38,7 @@ padding-bottom: 0;
   .upsLogo {
     //display: inline-block;
     float: left;
-    height: 45px;
+    height: 100px;
     width: auto;
     padding-bottom: 10px;
     padding-right: 10px;
