--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,27 +1,34 @@
 .header {
-    height: 12vh;
-    width: 100%;
-    background-color: #333333;
+  height: 12vh;
+  width: 100%;
+  background-color: #644117;
+  color: #ffb500;
 }
-.jumbotron{
-  margin-top: 0px;
-padding-top: 0;
-color: #FFB500;
-background-color: #644117;
-padding-bottom: 0;
+
+.ups-logo {
+  
+  height: 70px;
+}
+
+.padding-fix {
+  padding-top: 25px;
+}
+
+.row {
+    margin-right: 0; 
+    margin-left: 0;
 }
 
 @media only screen and (max-width: 600px) {
-  .jumbotron{
-  padding-top: 1;
-  color: #FFB500;
-  background-color: #644117;
-  padding-bottom: 1%;
-  height: 50px;
-
+  .jumbotron {
+    padding-top: 1;
+    color: #ffb500;
+    background-color: #644117;
+    padding-bottom: 1%;
+    height: 50px;
   }
   .upsLogo {
-    //display: inline-block;
+    /* display: inline-block; */
     float: left;
     height: 45px;
     width: auto;
